Ajout delete action pour presentation moche a recfaire
